--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "@types/react-dom": "^17.0.9",
     "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.15",
+    "react-hot-toast": "^2.1.1",
+    "axios": "^0.21.4",
     "chromatic": "^6.x",
     "eslint": "^8.x",
     "formik": "^2.2.9",
     "husky": "^7.x",
+    "react-virtualized": "^9.22.3",
+    "@types/react-virtualized": "^9.21.16",
     "lint-staged": "^12.x",
     "luxon": "^2.1.1",
     "prettier": "^2.x",
