--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,20 +3,18 @@
     "target": "ESNext",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
-    "skipLibCheck": true,
     "strict": false,
+    "noErrorTruncation": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
-    "allowSyntheticDefaultImports": true,
     "module": "ESNext",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react",
     "outDir": "./build",
-    "declaration": true,
     "sourceMap": true,
-    "baseUrl": "src/"
+    "baseUrl": "src"
   },
   "include": ["src"],
   "exclude": ["**/*stories.tsx"]
