--- a/package.json
+++ b/package.json
@@ -2,37 +2,30 @@
   "name": "shared-ui-storybook",
   "version": "0.1.0",
   "private": true,
+  "workspaces": [
+    "src/shared-ui/**"
+  ],
   "dependencies": {
-    "@popperjs/core": "^2.11.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "@types/jest": "^27.0.1",
-    "@types/luxon": "^2.0.7",
-    "@types/node": "^16.7.13",
-    "@types/react": "^17.0.20",
-    "@types/react-dom": "^17.0.9",
+    "@types/node": "^16.x",
+    "@types/react": "^17.x",
+    "@types/react-dom": "^17.x",
     "@types/react-helmet": "^6.1.4",
     "@types/styled-components": "^5.1.15",
-    "react-hot-toast": "^2.1.1",
-    "axios": "^0.21.4",
     "chromatic": "^6.x",
     "eslint": "^8.x",
-    "formik": "^2.2.9",
     "husky": "^7.x",
-    "react-virtualized": "^9.22.3",
-    "@types/react-virtualized": "^9.21.16",
     "lint-staged": "^12.x",
-    "luxon": "^2.1.1",
     "prettier": "^2.x",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-popper": "^2.2.5",
+    "react": "^17.x",
+    "react-dom": "^17.x",
     "react-scripts": "5.0.0",
     "styled-components": "^5.3.3",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0",
-    "yup": "^0.32.11"
+    "web-vitals": "^2.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
